[package]
name = "orestream"
version = "0.1.0"
edition = "2024"

[dependencies]
arete-sdk = { package = "arete-a4-sdk", version = "0.1.1" }
ore-stack = { path = "./src/generated/ore-stack" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
axum = { version = "0.8", features = ["ws"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }